<resources>
    <string name="app_name">Running App</string>
    <string name="api_key">AIzaSyBR2U0QS7lYJaiZnOPia9Suwgt6TkZ28ms</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="running_app">Running App</string>
    <string name="your_runs">Your Runs</string>
    <string name="settings">Settings</string>
    <string name="statistics">Statistics</string>
    <string name="continue1">Continue</string>
    <string name="kg">kg</string>
    <string name="your_weight">Your Weight</string>
    <string name="your_name">Your Name</string>
    <string name="welcome_nplease_enter_your_name_and_weight">Welcome!\nPlease enter your name and weight.</string>
    <string name="sort_by">Sort by:</string>
    <string name="let_s_go_username">Let\'s go, USERNAME!</string>
    <string name="finish_run">Finish Run</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="_00_00_00_00">00:00:00:00</string>
    <string name="cancel_run">Cancel Run</string>
    <string name="date">DATE</string>
    <string name="time">TIME</string>
    <string name="distance">DISTANCE</string>
    <string name="avgspeed">AVGSPEED</string>
    <string name="calories">CALORIES</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="total_distance">Total Distance</string>
    <string name="_0km">0km</string>
    <string name="total_time">Total Time</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="total_calories_burned">Total Calories Burned</string>
    <string name="_0kcal">0kcal</string>
    <string name="average_speed">Average Speed</string>
    <string name="_0km_h">0km/h</string>
    <string name="calories_burned">CALORIES BURNED</string>
    <string name="duration">DURATION</string>
    <string-array name="filter_options">
        <item>Date</item>
        <item>Running Time</item>
        <item>Distance</item>
        <item>Average Speed</item>
        <item>Calories Burned</item>
    </string-array>
</resources>