<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="20sp"
                android:gravity="center" />

            <TextView
                android:id="@+id/tvDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textSize="20sp"
                android:gravity="center" />

            <TextView
                android:id="@+id/tvAvgSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/avgspeed"
                android:textSize="20sp"
                android:gravity="center" />

            <TextView
                android:id="@+id/tvDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textSize="20sp"
                android:gravity="center" />

            <TextView
                android:id="@+id/tvCaloriesBurned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calories_burned"
                android:textSize="20sp"
                android:gravity="center" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>